# betterfox-nix

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  shell.nix  treefmt.nix  treefmt.toml
.github/: FUNDING.yaml  dependabot.yaml
.github/workflows/: check.yaml  generate-prefs.yaml  regenerate.yaml  update-flake.yaml
autogen/firefox/: 107.0.json  108.0.json  109.0.json  110.0.json  111.0.json  112.0.json  115.0.json  116.0.json  116.1.json  117.0.json  118.0.json  119.0.json  120.0.json  122.1.json  126.0.json  129.0.json  131.0.json  133.0.json  135.0.json  140.0.json  default.nix  main.json
autogen/librewolf/: 111.0.json  115.0.json  116.1.json  126.0.json  default.nix
autogen/smoothfox/: 107.0.json  108.0.json  109.0.json  116.1.json  118.0.json  119.0.json  126.0.json  128.0.json  default.nix
betterfox-nix/: Cargo.toml  default.nix
betterfox-nix/src/: main.rs
betterfox-nix/src/commands/: extract.rs  generate.rs  mod.rs
data/firefox/: 107.0.json  108.0.json  109.0.json  110.0.json  111.0.json  112.0.json  115.0.json  116.0.json  116.1.json  117.0.json  118.0.json  119.0.json  120.0.json  122.1.json  126.0.json  128.0.json  129.0.json  131.0.json  133.0.json  135.0.json  137.0.json  138.0.json  140.0.json  144.0.json  146.0.json  148.0.json  149.0.json  150.0.json  152.0.json  default.nix  main.json
data/librewolf/: 107.0.json  (+1 more)
dev/: flake.nix
extractor/: default.nix  extractor.py
generator/: default.nix  generator.py
modules/: default.nix  firefox.nix  librewolf.nix  smoothfox.nix  types.nix
(+35 files in other folders)
